<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.aqua.SecondActivity">

    <Button
        android:id="@+id/turb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/waterlevel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:background="@drawable/roundbutton"
        android:text="@string/turbdity"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/waterlevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/toggleButton"
        android:layout_toRightOf="@+id/toggleButton"
        android:background="@drawable/roundbutton"
        android:text="@string/water_level"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/toggleButton"
        android:layout_toStartOf="@+id/toggleButton"
        android:background="@drawable/roundbutton"
        android:text="@string/bill"
        android:textAllCaps="false" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignLeft="@+id/turb"
        android:layout_alignStart="@+id/turb"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textOff="@string/automatic"
        android:textOn="@string/manual"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/user_control" />

</RelativeLayout>
